implement api for gret sdp and add test gret-sdp.cc

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -61,6 +61,25 @@ add_test(NAME externalAppTest
          COMMAND OpenGR-externalAppTest)
 
 #############################################
+## gret-sdp
+set(gret-sdp_SRCS gret-sdp.cc)
+find_package(SDPA REQUIRED)
+include_directories(${SDPA_INCLUDE_DIRS})
+
+find_package(Boost 1.54 COMPONENTS system filesystem  REQUIRED)
+if (Boost_FOUND)
+include_directories(${Boost_INCLUDE_DIRS})
+
+    add_executable(gret-sdp ${gret-sdp_SRCS} ${testing_SRCS})
+    add_dependencies(buildtests gret-sdp)
+    add_test(NAME gret-sdp
+        #CONFIGURATIONS Release
+        COMMAND gret-sdp)
+    target_link_libraries(gret-sdp ${SDPA_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} gr::accel gr::algo gr::utils)      
+
+endif (Boost_FOUND)
+
+#############################################
 ## pair extraction
 set(pair_extraction_SRCS
     pair_extraction.cc
