--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -62,33 +62,31 @@ add_test(NAME externalAppTest
 
 #############################################
 ## gret-sdp
-set(gret-sdp_SRCS gret-sdp.cc)
-find_package(SDPA REQUIRED)
-include_directories(${SDPA_INCLUDE_DIRS})
 
-find_package(MOSEK REQUIRED)
-include_directories(${MOSEK_INCLUDE_DIRS})
 
-find_package(Boost 1.54 COMPONENTS system filesystem  REQUIRED)
-if (Boost_FOUND)
-    set(GRET_SDP_DATA_DIR_TO ${CMAKE_CURRENT_BINARY_DIR}/gret-sdp-data)
-    set(GRET_SDP_DATA_DIR_FROM ${PROJECT_SOURCE_DIR}/gret-sdp-data)
-    add_custom_target(copy_gret_sdp_data)
-    add_custom_command(TARGET copy_gret_sdp_data
-        POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E make_directory ${GRET_SDP_DATA_DIR_TO}
-        COMMAND ${CMAKE_COMMAND} -E copy ${GRET_SDP_DATA_DIR_FROM}/* ${GRET_SDP_DATA_DIR_TO}/.
-    )
+#find_package(Boost 1.54 COMPONENTS system filesystem  QUIET)
+#if (Boost_FOUND)
+#    set(gret-sdp_SRCS gret-sdp.cc)
+#    set(GRET_SDP_DATA_DIR_TO ${CMAKE_CURRENT_BINARY_DIR}/gret-sdp-data)
+#    set(GRET_SDP_DATA_DIR_FROM ${PROJECT_SOURCE_DIR}/gret-sdp-data)
+#    add_custom_target(copy_gret_sdp_data)
+#    add_custom_command(TARGET copy_gret_sdp_data
+#        POST_BUILD
+#        COMMAND ${CMAKE_COMMAND} -E make_directory ${GRET_SDP_DATA_DIR_TO}
+#        COMMAND ${CMAKE_COMMAND} -E copy ${GRET_SDP_DATA_DIR_FROM}/* ${GRET_SDP_DATA_DIR_TO}/.
+#    )
 
-    include_directories(${Boost_INCLUDE_DIRS})
-    add_executable(gret-sdp ${gret-sdp_SRCS} ${testing_SRCS})
-    add_dependencies(buildtests gret-sdp)
-    add_test(NAME gret-sdp
-        #CONFIGURATIONS Release
-        COMMAND gret-sdp)
-    target_link_libraries(gret-sdp ${SDPA_LIBRARIES} ${MOSEK_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} gr::accel gr::algo gr::utils)      
-    add_dependencies(gret-sdp copy_gret_sdp_data)
-endif (Boost_FOUND)
+#    include_directories(${Boost_INCLUDE_DIRS})
+#    add_executable(gret-sdp ${gret-sdp_SRCS} ${testing_SRCS})
+#    add_dependencies(buildtests gret-sdp)
+#    message("Adding gret-sdp to testing set")
+#    add_test(NAME gret-sdp
+#        #CONFIGURATIONS Release
+#        COMMAND gret-sdp gret-sdp-data/config.json)
+
+#    target_link_libraries(gret-sdp ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} gr::accel gr::algo gr::utils)
+#    add_dependencies(gret-sdp copy_gret_sdp_data)
+#endif (Boost_FOUND)
 
 #############################################
 ## pair extraction
