New export variables to check solver availability
variables are: OpenGR_USE_SDPA and OpenGR_USE_MOSEK

--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -23,6 +23,14 @@ if(@OpenGR_USE_CHEALPIX@)
   include("@OpenGR_EXPORT_TARGET_DIR@/chealpixTargets.cmake")
 endif(@OpenGR_USE_CHEALPIX@)
 
+if(@OpenGR_USE_SDPA@)
+  find_dependency(SDPA REQUIRED)
+endif(@OpenGR_USE_SDPA@)
+
+if(@OpenGR_USE_MOSEK@)
+  find_dependency(MOSEK REQUIRED)
+endif(@OpenGR_USE_MOSEK@)
+
 
 include("@OpenGR_EXPORT_TARGET_DIR@/OpenGR-AccelLibTargets.cmake")
 include("@OpenGR_EXPORT_TARGET_DIR@/OpenGR-AlgoLibTargets.cmake")
@@ -37,5 +45,8 @@ set(OpenGR_LIB_DIR "@OpenGR_INSTALL_LIB_DIR@/")
 if(@OpenGR_USE_CHEALPIX@)
   set(OpenGR_LIBRARIES chealpix)
 endif(@OpenGR_USE_CHEALPIX@)
+
+set(OpenGR_USE_SDPA  @OpenGR_USE_SDPA@)
+set(OpenGR_USE_MOSEK @OpenGR_USE_MOSEK@)
 
 set(OpenGR_FOUND 1)
