--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -23,14 +23,11 @@ if(@OpenGR_USE_CHEALPIX@)
   include("@OpenGR_EXPORT_TARGET_DIR@/chealpixTargets.cmake")
 endif(@OpenGR_USE_CHEALPIX@)
 
-if(@OpenGR_USE_SDPA@)
-  find_dependency(SDPA REQUIRED)
-endif(@OpenGR_USE_SDPA@)
+find_package(SDPA QUIET)
+set(OpenGR_USE_SDPA ${SDPA_FOUND})
 
-if(@OpenGR_USE_MOSEK@)
-  find_dependency(MOSEK REQUIRED)
-endif(@OpenGR_USE_MOSEK@)
-
+find_package(MOSEK QUIET)
+set(OpenGR_USE_MOSEK ${MOSEK_FOUND})
 
 include("@OpenGR_EXPORT_TARGET_DIR@/OpenGR-AccelLibTargets.cmake")
 include("@OpenGR_EXPORT_TARGET_DIR@/OpenGR-AlgoLibTargets.cmake")
@@ -45,8 +42,5 @@ set(OpenGR_LIB_DIR "@OpenGR_INSTALL_LIB_DIR@/")
 if(@OpenGR_USE_CHEALPIX@)
   set(OpenGR_LIBRARIES chealpix)
 endif(@OpenGR_USE_CHEALPIX@)
-
-set(OpenGR_USE_SDPA  @OpenGR_USE_SDPA@)
-set(OpenGR_USE_MOSEK @OpenGR_USE_MOSEK@)
 
 set(OpenGR_FOUND 1)
